[gd_scene load_steps=9 format=3 uid="uid://ttq13tvt5bes"]

[ext_resource type="Texture2D" uid="uid://k3ukplu4ahpe" path="res://textures/shapes/shape_circle.png" id="1_1fvd2"]
[ext_resource type="Script" uid="uid://vimxyeofv22w" path="res://scripts/shape_dial.gd" id="1_st04t"]
[ext_resource type="Texture2D" uid="uid://dxldqvm4yjfbn" path="res://textures/shapes/shape_cone.png" id="2_st04t"]
[ext_resource type="Texture2D" uid="uid://285in5cei6qm" path="res://textures/Screen.png" id="2_vdbu4"]
[ext_resource type="Texture2D" uid="uid://bd6toncvpo5gj" path="res://textures/shapes/shape_cross.png" id="3_vdbu4"]
[ext_resource type="Texture2D" uid="uid://x2bujg8erje3" path="res://textures/shapes/shape_diamond.png" id="4_1jnwg"]
[ext_resource type="Texture2D" uid="uid://bwhoeuubhnjqb" path="res://textures/shapes/shape_funnel.png" id="5_ekegu"]
[ext_resource type="Texture2D" uid="uid://by0wado2g4xt6" path="res://textures/shapes/shape_square.png" id="6_efm0y"]

[node name="ShapeDial" type="Node2D"]
script = ExtResource("1_st04t")

[node name="Screen" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
scale = Vector2(1.4, 1.4)
texture = ExtResource("6_efm0y")

[node name="RealScreen" type="Sprite2D" parent="."]
scale = Vector2(0.82, 0.82)
texture = ExtResource("2_vdbu4")

[node name="ShapeCircle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_1fvd2")

[node name="ShapeTriangle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_st04t")

[node name="ShapeCross" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_vdbu4")

[node name="ShapeDiamond" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_1jnwg")

[node name="ShapeFunnel" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_ekegu")

[node name="ShapeSquare" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_efm0y")

[node name="Hint" type="Label" parent="."]
offset_left = -112.857
offset_top = -54.2857
offset_right = 112.143
offset_bottom = 41.7143
theme_override_font_sizes/font_size = 58
text = "DAY"
horizontal_alignment = 1
vertical_alignment = 1
